# entab

./: .gitignore  Cargo.toml  LICENSE.md  README.md  app.webmanifest  service-worker.js
.github/workflows/: publish.yml  tests.yml  website.yml
benches/: benchmarks.rs
entab/: Cargo.toml  README.md
entab-benchmarks/: Cargo.toml  README.md
entab-benchmarks/benches/: benchmark.rs  fasta.rs
entab-cli/: Cargo.toml  README.md
entab-cli/src/: lib.rs  main.rs  tsv_params.rs  utils.rs
entab-js/: Cargo.toml  README.md  example.html
entab-js/example/: app.js  index.html
entab-js/src/: lib.rs
entab-js/tests/: web.rs
entab-py/: Cargo.toml  README.md  pyproject.toml
entab-py/entab/: __init__.py  spectra.py
entab-py/src/: lib.rs  raw_io_wrapper.rs
entab-r/: .Rbuildignore  .gitignore  Cargo.toml  DESCRIPTION  LICENSE  NAMESPACE  README.md
entab-r/R/: lib.R
entab-r/man/: Reader-class.Rd  as.data.frame-Reader-method.Rd  cash-Reader-method.Rd  initialize-Reader-method.Rd  show-Reader-method.Rd
entab-r/src/: Makefile  Makevars  Makevars.win  lib.rs  util.rs
entab/benches/: benchmarks.rs
entab/fuzz/: Cargo.toml
entab/fuzz/fuzz_targets/: inficon.rs  reader.rs  tsv.rs
entab/src/: buffer.rs  chunk.rs  compression.rs  error.rs  filetype.rs  lib.rs  parsers.rs  readers.rs  record.rs
entab/src/parsers/: common.rs  fasta.rs  fastq.rs  flow.rs  inficon.rs  microsoft_common.rs  mod.rs  png.rs  sam.rs  tsv.rs  tsv_inference.rs  xml.rs
entab/src/parsers/agilent/: chemstation.rs  chemstation_new.rs  chemstation_reg.rs  masshunter.rs  metadata.rs  mod.rs
entab/src/parsers/thermo/: mod.rs  thermo_iso.rs  thermo_raw.rs
entab/src/readers/: chemstation.rs  fasta.rs  fastq.rs  flow.rs  inficon.rs  kmers.rs  mod.rs  png.rs  sam.rs  thermo.rs  thermo_iso.rs  tsv.rs  xml.rs
entab/src/readers/agilent/: chemstation.rs  chemstation_new.rs  chemstation_reg.rs  mod.rs
entab/src/readers/thermo/: mod.rs  thermo_iso.rs
entab/src/utils/: error.rs  mod.rs  string.rs
entab/tests/: DATA_SOURCES.txt
entab/tests/data/: sequence.fasta  test-0000.cf  test.bam  test.csv.bz2  test.csv.xz  test.csv.zst  test.fastq  test.sam  test_179_fid.ch  test_fid.ch
entab/tests/data/chemstation_mwd.d/: ACQRES.REG  LAFC1FD.REG  LCDIAG.REG  MSACQINF.REG  SAMPLE.MAC  mwd1A.ch  mwd1B.ch  mwd1C.ch  mwd1D.ch  mwd1E.ch  result.ini
entab/tests/data/chemstation_mwd.d/ATUNES.TUN/: NEGATIVE.U  POSITIVE.U
entab/tests/data/chemstation_mwd.d/RUN.M/: ACQ.MS  DAMETHOD.REG  FIA.REG  INFO.MTH  LAFC1.REG  LALS1.REG  LMWD1.REG  LPMP1.REG  LTHM1.REG  RECALIB.MTH
entab/tests/data/masshunter_example/: desktop.ini
entab/tests/data/masshunter_example/AcqData/: AcqMethod.xml  Contents.xml  DAD1.cd  DAD1.cg  DAD1.sd  DAD1.sp  DeviceConfigInfo.xml  Devices.xml  MSScan.xsd  MSTS.xml  QuatPump1.cd  QuatPump1.cg  TCC1.cd  TCC1.cg  Worklist.xml  atunes.tune.xml  sample_info.xml
entab/tests/data/masshunter_example/AcqData/RJB_Airs2001FIA.m/: 192_1.stg  192_1.xml  DAD_1.XML  HiP-ALS_1.XML  HiP-ALS_1_Pretreatment.XML  QuatPump_1.XML  TCC_1.XML  info.xml  msgeneral.xsd  msquad.xsd  qqqacqmeth.xsd
entab/tests/data/masshunter_example/AcqData/RJB_Airs2001FIA.m/DaMethod/Qual/: method.xml
fuzz/fuzz_targets/: reader.rs
pkg/: LICENSE.md  entab.d.ts  entab.js  entab_bg.wasm  entab_bg.wasm.d.ts  package.json
pkg/snippets/entab-js-c8a6dca5d6f0b229/: inline0.js
src/: buffer.rs  compression.rs  filetype.rs  lib.rs  main.rs  mime.rs  record.rs
src/formats/: fasta.rs  mod.rs
src/readers/: chemstation.rs  fasta.rs  fastq.rs  mod.rs  sam.rs  tsv.rs
src/utils/: mod.rs
