[package]
name = "entab"
version = "0.1.0"
authors = ["Roderick <rbovee@gmail.com>"]
edition = "2018"

[dependencies]
# parsing
memchr = "2.3.3"
# compression
flate2 = { version = "1.0.14", optional = true }
bzip2 = { version = "0.3.3", optional = true }
xz2 = { version = "0.1.6", optional = true }
zstd = { version = "0.5.1", optional = true }

[features]
default = ["compression"]
compression = ["flate2", "bzip2", "xz2", "zstd"]
