[package]
name = "entab-benchmarks"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entab = { path = "../entab" }
needletail = "0.5.1"
noodles = { version = "0.41.0", features = ["bam", "fasta", "fastq", "sam"] }
bio = "1.2.0"
rust-htslib = "0.43.1"
seq_io = "0.3.1"
memchr = "2.5"  # for optimized FASTA benchmark

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
