[package]
name = "entab-cli"
version = "0.3.1"
authors = ["Roderick <rbovee@gmail.com>"]
edition = "2018"
description = "Record-format file reader CLI"
readme = "README.md"
repository = "https://github.com/bovee/entab"
license = "MIT"
categories = ["command-line-utilities", "parsing", "science"]

[dependencies]
clap = { version = "3.1.5", features = ["cargo"] }
entab = { path = "../entab", version = "0.3.1" }
memchr = "2.4"
memmap2 = { version = "0.5.3", optional = true }

[features]
default = ["mmap"]
mmap = ["memmap2"]

[[bin]]
name = "entab"
path = "src/main.rs"
