[package]
name = "entab-cli"
version = "0.3.3"
authors = ["Roderick <rbovee@gmail.com>"]
edition = "2018"
description = "Record-format file reader CLI"
readme = "README.md"
repository = "https://github.com/bovee/entab"
license = "MIT"
categories = ["command-line-utilities", "parsing", "science"]

[dependencies]
clap = { version = "4.5.7", features = ["cargo"] }
entab = { path = "../entab", version = "0.3.1" }
memchr = "2.7"
memmap2 = { version = "0.9.4", optional = true }

[features]
default = ["mmap"]
mmap = ["memmap2"]

[[bin]]
name = "entab"
path = "src/main.rs"
