[package]
name = "entab-js"
version = "0.3.1"
authors = ["Roderick <rbovee@gmail.com>"]
license = "MIT"
description = "Record-format file reader"
repository = "https://github.com/bovee/entab"
edition = "2018"

[lib]
name = "entab"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
entab_base = { package = "entab", path = "../entab", default-features = false, features = ["std"] }
js-sys = "0.3.64"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.36"
