[package]
name = "entab-py"
version = "0.2.2"
authors = ["Roderick <rbovee@gmail.com>"]
license = "MIT"
description = "Record-format file reader"
repository = "https://github.com/bovee/entab"
edition = "2018"

[dependencies]
entab_base = { package = "entab", path = "../entab", default-features = false, features = ["std", "compression_manylinux"] }
memmap = "0.7"
pyo3 = "0.15.1"

[lib]
name = "entab"
crate-type = ["cdylib"]

[features]
maturin = ["pyo3/extension-module"]
