[package]
name = "entab-py"
version = "0.3.2"
authors = ["Roderick <rbovee@gmail.com>"]
license = "MIT"
description = "Record-format file reader"
repository = "https://github.com/bovee/entab"
edition = "2018"

[dependencies]
entab_base = { package = "entab", path = "../entab", default-features = false, features = ["std"] }
memmap = "0.7"
pyo3 = { version = "0.22.0" }

[lib]
name = "entab"
crate-type = ["cdylib"]

[features]
maturin = ["pyo3/extension-module"]

[package.metadata.maturin]
name = "entab"
