[package]
name = "entab-r"
version = "0.1.0"
authors = ["Roderick <rbovee@gmail.com>"]
edition = "2018"

[dependencies]
entab_base = { package = "entab", path = "../entab"}
extendr-api = { git = "https://github.com/extendr/extendr", rev="a628dc9ca8fdf2256420837fe6d2fc42c5e14386" }
libR-sys = "0.1.8"

[lib]
name = "entab"
crate-type = ["cdylib"]
