[package]
name = "entab"
version = "0.1.0"
authors = ["Roderick <rbovee@gmail.com>"]
edition = "2018"
description = "Record-format file reader"
readme = "README.md"
repository = "https://github.com/bovee/entab"
license = "MIT"
categories = ["parsing", "science"]

[dependencies]
# parsing
memchr = "2.3"
serde = { version = "1.0", features = ["derive"] }
# compression
flate2 = { version = "1.0" }
bzip2 = { version = "0.3", optional = true }
xz2 = { version = "0.1", optional = true }
zstd = { version = "0.5", optional = true }

[dev-dependencies]
criterion = "0.3"

[features]
default = ["compression", "std"]
compression = ["bzip2", "xz2", "zstd"]
compression_manylinux = ["bzip2", "zstd"]
std = []

[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false
