[package]
name = "entab"
version = "0.3.3"
authors = ["Roderick <rbovee@gmail.com>"]
edition = "2018"
description = "Record-format file reader"
readme = "README.md"
repository = "https://github.com/bovee/entab"
license = "MIT"
categories = ["parsing", "science"]

[dependencies]
# parsing
bytecount = "0.6.8"
chrono = { version = "0.4", default-features=false, features = ["alloc", "serde"] }
encoding = "0.2.33"
memchr = "2.7"
serde = { version = "1.0", default-features=false, features = ["derive"] }
# compression
flate2 = { version = "1.0" }
bzip2 = { version = "0.4", optional = true }
xz2 = { version = "0.1", optional = true }
zstd = { version = "0.13", optional = true }

[dev-dependencies]
criterion = "0.3"
rayon = "1.5.1"

[features]
default = ["compression", "std"]
compression = ["bzip2", "xz2", "zstd"]
std = ["bytecount/runtime-dispatch-simd", "chrono/std", "serde/std"]

[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false
